adds ISO639-2 language code to name mapping

--- a/transformer/src/main/resources/metadataLabels_en.properties
+++ b/transformer/src/main/resources/metadataLabels_en.properties
@@ -10,7 +10,7 @@ author=Author
 author.displayOrder=3
 collection=Collection
 collection.displayOrder=4
-language-iso639-2=Language
+language-iso639-2=Language Code
 language-iso639-2.displayOrder=5
 script-iso15924=Script Type
 script-iso15924.displayOrder=6
